--- a/PL/Volunteer/VolunteerWindow.xaml
+++ b/PL/Volunteer/VolunteerWindow.xaml
@@ -13,6 +13,7 @@
             <RowDefinition Height="500*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"/>
         <!--Internal, Upper Grid-->
         <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto" >
             <Grid.ColumnDefinitions>
@@ -20,8 +21,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Label" HorizontalAlignment="Left" Margin="126,0,0,0" VerticalAlignment="Center"/>
-            <ComboBox  Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-/>
+            <ComboBox  Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
         <DataGrid Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
     </Grid>
