--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -37,7 +37,9 @@
                 <!-- Buttons -->
             </Grid.RowDefinitions>
             <!-- Label to display the system clock value -->
-            <Label Content="{Binding CurrentTime}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
+            <!---->
+<Label Content="{Binding CurrentTime, StringFormat='{}{0:HH:mm:ss}'}" 
+       HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"/>
             <!-- Buttons to advance the clock -->
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
                 <!-- TextBox and button to advance by one minute -->
@@ -70,6 +72,7 @@
             <Label Content="Configuration Variable:" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="34,0,0,0" Width="107" Height="40"/>
             <TextBox HorizontalAlignment="Stretch" Margin="10,5"/>
             <!-- Button to update the configuration variable value -->
+
             <Button Content="Update RiskRange" HorizontalAlignment="Center" Margin="10" Click="UpdateRiskRange_Click"/>
         </Grid>
 
@@ -79,5 +82,6 @@
             <Button Content="Initialize Database" Margin="5" Padding="10"/>
             <Button Content="Reset Database" Margin="5" Padding="10"/>
         </StackPanel>
+
     </Grid>
 </Window>
