--- a/PL/Volunteer/VolunteerListWindow.xaml
+++ b/PL/Volunteer/VolunteerListWindow.xaml
@@ -9,6 +9,15 @@
             DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Grid>
-        
+
+        <ListView Margin="5" Grid.Row="0" ItemsSource="{Binding CourseList}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="ID" DisplayMemberBinding="{Binding ID}" />
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
+                    <!-- הוסף עמודות בהתאם לשדות במודל הנתונים -->
+                </GridView>
+            </ListView.View>
+        </ListView>
     </Grid>
 </Window>
