--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,9 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:Calltype x:Key="Calltype" />
+
     </Application.Resources>
+    
+       
 </Application>
