From 6-11 to 8-3 update and fix: only need to cheak hoursand

--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,9 +4,6 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <local:Calltype x:Key="Calltype" />
-
+        <local:VolunteerFilterCollection x:Key="VolunteerFilterCollectionKey" />
     </Application.Resources>
-    
-       
 </Application>
