--- a/PL/Volunteer/VolunteerListWindow.xaml
+++ b/PL/Volunteer/VolunteerListWindow.xaml
@@ -3,13 +3,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PL.Volunteer"
+        xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="VolunteerListWindow" Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Grid>
-        <ListView Margin="5" Grid.Row="0" ItemsSource="{Binding VolInList}">
+        <!-- ListView for displaying volunteers -->
+        <ListView Margin="5" Grid.Row="0" ItemsSource="{Binding VolunteerInList}">
             <ListView.View>
                 <GridView>
                     <!-- ID Column -->
@@ -55,13 +56,16 @@
             </ListView.View>
         </ListView>
 
-        <!-- ComboBox for Filtering Volunteers by Call Type -->
-        <ComboBox Grid.Column="1" SelectedValue="{Binding Calltype, Mode=TwoWay}"
-                  ItemsSource="{Binding Source={StaticResource Calltype}}"
-                  Width="150"
+        <!-- ComboBox for Filtering Volunteers by different criteria (Id, Name, Active) -->
+        <ComboBox Name="FilterComboBox" 
+                  SelectedValue="{Binding SelectedFilter, Mode=TwoWay}"
+                  Width="80"
                   HorizontalAlignment="Right"
                   VerticalAlignment="Top"
-                  Margin="10"
-                  SelectionChanged="FilterVolunteerlistByCalltype" />
+                  Margin="5"
+                  ItemsSource="{Binding Source={StaticResource VolunteerFilterCollectionKey}}"
+                  SelectionChanged="FilterVolunteerlistByCriteria">
+        </ComboBox>
+
     </Grid>
 </Window>
