--- a/PL/Volunteer/VolunteerWindow.xaml
+++ b/PL/Volunteer/VolunteerWindow.xaml
@@ -1,32 +1,46 @@
 ﻿<Window x:Class="PL.Volunteer.VolunteerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Volunteer"
-        mc:Ignorable="d"
-        Title="VolunteerWindow" Height="640" Width="800"
-    DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
+        Title="Volunteer Details"
+        Height="450" Width="400"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
-    <!--External Grid-->
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*"/>
-            <RowDefinition Height="500*"/>
-            <RowDefinition Height="Auto"/>
-
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"/>
-        <!--Internal, Upper Grid-->
-        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto" >
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" Content="Label" HorizontalAlignment="Left" Margin="126,0,0,0" VerticalAlignment="Center"/>
-            <ComboBox  Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
-        </Grid>
-        <DataGrid Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <!-- Name -->
+        <Label Content="Name:" Grid.Row="0" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Name}" Grid.Row="0" Margin="100,0" HorizontalAlignment="Stretch" />
+
+        <!-- Phone Number -->
+        <Label Content="Phone Number:" Grid.Row="1" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Number_phone}" Grid.Row="1" Margin="100,0" HorizontalAlignment="Stretch" />
+
+        <!-- Email -->
+        <Label Content="Email:" Grid.Row="2" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Email}" Grid.Row="2" Margin="100,0" HorizontalAlignment="Stretch" />
+
+        <!-- Active Status -->
+        <Label Content="Active:" Grid.Row="3" HorizontalAlignment="Left" />
+        <CheckBox IsChecked="{Binding Volunteer.Active}" Grid.Row="3" Margin="100,0" HorizontalAlignment="Left" />
+
+        <!-- Role -->
+        <Label Content="Role:" Grid.Row="4" HorizontalAlignment="Left" />
+        <ComboBox ItemsSource="{Binding Roles}" 
+                  SelectedItem="{Binding Volunteer.Role}" 
+                  Grid.Row="4" Margin="100,0" 
+                  HorizontalAlignment="Stretch" 
+                  DisplayMemberPath="ToString()" />
+
+        <!-- Button (Add/Update) -->
+        <Button Content="{Binding ButtonText}" Click="btnAddUpdate_Click" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="118" RenderTransformOrigin="0.503,0.545" Margin="0,20,0,0" />
     </Grid>
 </Window>
