End Part 9 +need to fix ENUM ROLE

--- a/PL/Volunteer/VolunteerListWindow.xaml
+++ b/PL/Volunteer/VolunteerListWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="VolunteerListWindow" Height="450" Width="800"
+        Title="Volunteer List" Height="450" Width="800"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Grid>
         <!-- ListView for displaying volunteers -->
-        <ListView Margin="5" Grid.Row="0" ItemsSource="{Binding VolunteerInList}">
+        <ListView Margin="5" ItemsSource="{Binding VolunteerInList}">
             <ListView.View>
                 <GridView>
                     <!-- ID Column -->
@@ -66,6 +66,14 @@
                   ItemsSource="{Binding Source={StaticResource VolunteerFilterCollectionKey}}"
                   SelectionChanged="FilterVolunteerlistByCriteria">
         </ComboBox>
+
+
+        <Grid>
+            <!-- כפתור שמופיע בממשק -->
+            <Button Content="ADD Volunteer" HorizontalAlignment="Left" VerticalAlignment="Top" Width="96" Height="40" Click="AddVolunteerButton_Click" Margin="325,369,0,0"/>
+        </Grid>
+
+
 
     </Grid>
 </Window>
