--- a/PL/Volunteer/VolunteerWindow.xaml
+++ b/PL/Volunteer/VolunteerWindow.xaml
@@ -1,10 +1,16 @@
 ﻿<Window x:Class="PL.Volunteer.VolunteerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:PL.Volunteer"
+        xmlns:local="clr-namespace:PL"
         Title="Volunteer Details"
         Height="450" Width="400"
         DataContext="{Binding RelativeSource={RelativeSource Self}}">
+
+    <Window.Resources>
+        <!-- הוספת ה-Converter לקובץ ה-XAML -->
+        <local:ConvertUpdateToTrueKey x:Key="ConvertUpdateToTrueKey"/>
+        <local:ConvertUpdateToVisibleKey x:Key="ConvertUpdateToVisibleKey"/>
+    </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -14,33 +20,78 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+        <!-- ID -->
+        <Label Content="ID:" Grid.Row="0" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Id}" Grid.Row="0" Margin="100,0" HorizontalAlignment="Stretch" 
+                 IsReadOnly="{Binding Volunteer.Id, Converter={StaticResource ConvertUpdateToTrueKey}}" />
+
         <!-- Name -->
-        <Label Content="Name:" Grid.Row="0" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Name}" Grid.Row="0" Margin="100,0" HorizontalAlignment="Stretch" />
+        <Label Content="Name:" Grid.Row="1" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Name}" Grid.Row="1" Margin="100,0" HorizontalAlignment="Stretch" />
 
         <!-- Phone Number -->
-        <Label Content="Phone Number:" Grid.Row="1" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Number_phone}" Grid.Row="1" Margin="100,0" HorizontalAlignment="Stretch" />
+        <Label Content="Phone Number:" Grid.Row="2" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Number_phone}" Grid.Row="2" Margin="100,0" HorizontalAlignment="Stretch" />
 
         <!-- Email -->
-        <Label Content="Email:" Grid.Row="2" HorizontalAlignment="Left" />
-        <TextBox Text="{Binding Volunteer.Email}" Grid.Row="2" Margin="100,0" HorizontalAlignment="Stretch" />
+        <Label Content="Email:" Grid.Row="3" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Email}" Grid.Row="3" Margin="100,0" HorizontalAlignment="Stretch" />
 
         <!-- Active Status -->
-        <Label Content="Active:" Grid.Row="3" HorizontalAlignment="Left" />
-        <CheckBox IsChecked="{Binding Volunteer.Active}" Grid.Row="3" Margin="100,0" HorizontalAlignment="Left" />
+        <Label Content="Active:" Grid.Row="4" HorizontalAlignment="Left" />
+        <CheckBox IsChecked="{Binding Volunteer.Active}" Grid.Row="4" Margin="100,0" HorizontalAlignment="Left" />
 
         <!-- Role -->
-        <Label Content="Role:" Grid.Row="4" HorizontalAlignment="Left" />
+        <!-- 
+        <Label Content="Role:" Grid.Row="5" HorizontalAlignment="Left" />
         <ComboBox ItemsSource="{Binding Roles}" 
-                  SelectedItem="{Binding Volunteer.Role}" 
-                  Grid.Row="4" Margin="100,0" 
-                  HorizontalAlignment="Stretch" 
+          SelectedItem="{Binding Volunteer.Role}" 
+          Grid.Row="5" Margin="100,0" 
+          HorizontalAlignment="Stretch" 
+          DisplayMemberPath="ToString()" /> -->
+        <Label Content="Role:" Grid.Row="5" HorizontalAlignment="Left" />
+        <ComboBox ItemsSource="{Binding Roles}" 
+          SelectedItem="{Binding Volunteer.Role}" 
+          Grid.Row="5" Margin="100,0" 
+          HorizontalAlignment="Stretch">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={StaticResource EnumToStringConverter}}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <!-- אם אתה לא משתמש ב-ToString(), תשתמש בפרופרטי ראוי -->
+
+
+        <!-- Full Current Address -->
+        <Label Content="Full Current Address:" Grid.Row="6" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.FullCurrentAddress}" Grid.Row="6" Margin="100,0" HorizontalAlignment="Stretch" />
+
+        <!-- Distance -->
+        <Label Content="Distance:" Grid.Row="7" HorizontalAlignment="Left" />
+        <TextBox Text="{Binding Volunteer.Distance}" Grid.Row="7" Margin="100,0" HorizontalAlignment="Stretch" />
+
+        <!-- Distance Type -->
+        <Label Content="Distance Type:" Grid.Row="8" HorizontalAlignment="Left" />
+        <ComboBox ItemsSource="{Binding DistanceTypes}" 
+                  SelectedItem="{Binding Volunteer.DistanceType}" 
+                  Grid.Row="8" Margin="100,0,100,227" 
                   DisplayMemberPath="ToString()" />
 
         <!-- Button (Add/Update) -->
-        <Button Content="{Binding ButtonText}" Click="btnAddUpdate_Click" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Top" Height="40" Width="118" RenderTransformOrigin="0.503,0.545" Margin="0,20,0,0" />
+        <Button Content="{Binding ButtonText}" 
+                Click="btnAddUpdate_Click" 
+                Grid.Row="9" 
+                HorizontalAlignment="Left" 
+                VerticalAlignment="Top" 
+                Height="39" 
+                Width="118" 
+                Margin="135,161,0,0" />
     </Grid>
 </Window>
