Correction of observers + Now all data is displayed in the update window. Remaining - to correct the ID cards in the layer DO to 9 digit

--- a/PL/Volunteer/VolunteerListWindow.xaml
+++ b/PL/Volunteer/VolunteerListWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
         Title="Volunteer List" Height="450" Width="800"
+        Loaded="Window_Loaded"
+        Closed="Window_Closed"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
 
     <Grid>
@@ -58,10 +60,13 @@
                     <GridViewColumn Header="Delete">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <Button Content="Delete" Click="DeleteVolunteerButton_Click" />
+                                <Button Content="Delete" 
+                    Click="DeleteVolunteerButton_Click"
+                    CommandParameter="{Binding}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
+
 
                 </GridView>
             </ListView.View>
